log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 3000
